samples/_failures_safe/1761321839_e3907a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90ee45c1.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_90ee45c1.c:169:9: error: expected ‘,’ or ‘;’ at end of input
  169 |         TokenType op = parser->current.type
      |         ^~~~~~~~~
./samples/SAFE/__tmp_90ee45c1.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_90ee45c1.c:169:9: error: expected declaration or statement at end of input
